# gclef-wavefinder

./: .gitignore  10-local.rules  MightexBufCmos.py  README.md  config.toml  example_sequence.csv  focus.py  galil_sandbox.py  main.py  min_config.toml  old_main.py  pyproject.toml  t-Mightex.py  zaberSandbox.py
CCDBufCamera_CDROM_181227/Application/: camera_1.set
CCDBufCamera_CDROM_181227/TWAIN/MightexBufCCDDS/: MightexBUFCCDTWAINDS.ds
CCDBufCamera_CDROM_181227/TWAIN/VC_AppExample/: ChildFrm.h  DIB.cpp  InputDlg.cpp  InputDlg.h  MainFrm.cpp  MainFrm.h  ReadMe.txt  StdAfx.h  TwainCpp.cpp  TwainCpp.h  twaintest.cpp  twaintest.dsw  twaintest.plg  twaintestView.cpp  twaintestView.h
Galil_SDK/: gclib.py  setup.py
Mightex_SDK/: Release.doc
Mightex_SDK/SDK/Examples/: Readme.txt
Mightex_SDK/TWAIN/VC_AppExample/: twaintest.ncb  twaintestDoc.cpp
devices/: Axis.py  GalilAdapter.py  GalilAxis.py  MightexBufCmos.py  ZaberAdapter.py  ZaberAxis.py
devices/Galil_SDK/: HOME  example.py  gclib.py
doc/: Mightex.md  UserGuide.md  WSL.md
functions/: focus.py  image.py  position.py
gclib/: GALIL-GPG-KEY-E29D0E4B.asc  galil.list  terminal.py
gui/: app.py  camera_panel.py  camera_view.py  detector_motion_panel.py  function_panel.py  motion_panel.py  utils.py
src/wavefinder/devices/: Axis.py  DkMonochromator.py  GalilAdapter.py  GalilAxis.py  MightexBufCmos.py  ZaberAdapter.py  ZaberAxis.py
src/wavefinder/functions/: focus.py  image.py  position.py  sequence.py  sequencer.py  writer.py
src/wavefinder/gui/: app.py  camera_panel.py  config.py  function_panel.py  monochrom_panel.py  motion_panel.py  scrollable_container.py  scrollable_frame.py  (+1 more)
tools/: dk_monochromator.py  reset_all_zaber.py
(+107 files in other folders)
